<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/courseNameHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/course_name"
        app:layout_constraintBottom_toTopOf="@+id/courseNameInput"
        app:layout_constraintStart_toStartOf="@+id/guidelineL"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/courseNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/holeCountHeadnline"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintStart_toStartOf="@+id/guidelineL"
        app:layout_constraintTop_toBottomOf="@+id/courseNameHeadline" />

    <TextView
        android:id="@+id/holeCountHeadnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hole_count"
        app:layout_constraintStart_toStartOf="@+id/guidelineL"
        app:layout_constraintTop_toBottomOf="@+id/courseNameInput" />

    <EditText
        android:id="@+id/holeCountInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/count"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineL"
        app:layout_constraintTop_toBottomOf="@+id/holeCountHeadnline"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/golfersHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/golfers"
        app:layout_constraintBottom_toTopOf="@+id/golferListView"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineL" />

    <ScrollView
        android:id="@+id/golferListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/golferNameHeadline"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineL"
        app:layout_constraintTop_toBottomOf="@+id/golferPlus">

        <LinearLayout
            android:id="@+id/golferListLayout"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/golfer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/golferNameHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/golfer_name"
        app:layout_constraintBottom_toTopOf="@+id/golferNameInput"
        app:layout_constraintStart_toStartOf="@+id/guidelineL" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/golferNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:text="@string/player"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/golferDelete"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintStart_toStartOf="@+id/guidelineL" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/golferPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/green_light"
        android:clickable="true"
        app:backgroundTint="@color/green_dark"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintTop_toBottomOf="@+id/holeCountInput"
        app:rippleColor="@color/black"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/golferDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/golfer_delete"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintStart_toStartOf="@+id/guidelineL" />

    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintStart_toStartOf="@+id/guidelineL" />


</androidx.constraintlayout.widget.ConstraintLayout>